--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 header {
-  background-image: url(./images/cover.jpg);
+  background-image: url(./images/cover-blue.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
